--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,38 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+				<dependency>
+			<groupId>com.liferay</groupId>
+			<artifactId>nl.captcha.simplecaptcha</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.jhlabs</groupId>
+			<artifactId>filters</artifactId>
+			<version>2.0.235-1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.5.2</version> 
+		</dependency>
+		
+		<dependency>
+			<groupId>com.dhtmlx.planner</groupId>
+			<artifactId>javaplanner</artifactId>
+			<version>1.5</version> 
+
+		</dependency>
+		
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.4</version>
+		</dependency>
+		
 	</dependencies>
+	
 	<profiles>
 		<profile>
 			<!-- When built in OpenShift the 'openshift' profile will be used when 
